force-app/main/default/objects/cgcloud__CP_Pricing_Condition_Scale_Stage__c/cgcloud__CP_Pricing_Condition_Scale_Stage__c.object-meta.xml
<CustomObject>
    <description>Staging table for condition scales used by the complex pricing.</description>
    <label>Pricing Condition Scale Stage</label>
    <nameField>
        <displayFormat>PCSS-{0000000}</displayFormat>
        <label>Pricing Condition Scale Stage Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pricing Condition Scale Stages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>