force-app/main/default/objects/cgcloud__CP_Pricing_Condition_Scale_Stage__c/fields/cgcloud__Position__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Position__c</fullName>
    <description>Position number given by the ERP.</description>
    <label>Position</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>