force-app/main/default/objects/cgcloud__CP_Pricing_Condition_Scale_Stage__c/fields/cgcloud__Pricing_Condition_Stage__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Pricing_Condition_Stage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to Pricing Condition Stage.</description>
    <label>Pricing Condition Stage</label>
    <referenceTo>cgcloud__CP_Pricing_Condition_Stage__c</referenceTo>
    <relationshipLabel>Pricing Condition Scale Stages</relationshipLabel>
    <relationshipName>Pricing_Condition_Scale_Stages</relationshipName>
    <type>Lookup</type>
</CustomField>