force-app/main/default/objects/cgcloud__CP_Pricing_Condition_Scale_Stage__c/fields/cgcloud__Product__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to Product.</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Pricing Condition Scale Stages</relationshipLabel>
    <relationshipName>Pricing_Condition_Scale_Stages</relationshipName>
    <type>Lookup</type>
</CustomField>