force-app/main/default/objects/cgcloud__CP_Pricing_Condition_Scale_Stage__c/fields/cgcloud__Rate__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Rate__c</fullName>
    <description>Condition value of the scale range.</description>
    <label>Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>