force-app/main/default/objects/cgcloud__CP_Pricing_Condition_Scale_Stage__c/fields/cgcloud__Scale_Value__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Scale_Value__c</fullName>
    <description>Defines the levels of the scale condition.</description>
    <label>Scale Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>