force-app/main/default/objects/cgcloud__CP_Pricing_Condition_Scale_Stage__c/fields/cgcloud__Status__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Status__c</fullName>
    <description>State of the pricing condition scale stage.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>n</fullName>
            </value>
            <value>
                <fullName>u</fullName>
            </value>
            <value>
                <fullName>d</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>